# econ-sim

./: Cargo.toml
src/: main.rs  production.rs
src/db/: mod.rs
src/models/: agent.rs  commodity.rs  inventory.rs  mod.rs  production_requirement.rs  production_strategy.rs  trade_offer.rs
