[package]
name = "econ-sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
rand = "0.8.5"
sea-orm = { version = "^0", features = [
  "sqlx-sqlite",
  "runtime-tokio-rustls",
  "macros",
] }
tokio = { version = "1.28.1", features = ["rt", "rt-multi-thread", "macros"] }

[dependencies.uuid]
version = "1.3.2"
features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
